test/files/neg/t3115d/lib_1.scala

// scalac: -Xlint -Werror

package p {
  @deprecated("this is the old lib", since="2.0")
  object `package`

  class C
}
